comments and site folder

--- a/index.html
+++ b/index.html
@@ -1,398 +1,11 @@
-<!-- To run the page locally:
-      cd project root
-      python -m http.server8000
-      open http://localhost:8000/ on chrome
-      Will not load correctly if you just run the index file. - tisya -->
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Major Flight Trends Over the Past 25 Years</title>
-  <meta name="description" content="DS4200 final project — U.S. flight trends, disruptions, and recovery (1999-2024).">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
-
-  <!-- AOS Animate on Scroll -->
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-
-  <!-- D3 -->
-  <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
-  <script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
-
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="0; url=site/index.html" />
+  <title>Redirecting…</title>
 </head>
-
 <body>
-  <!-- Navigation Bar -->
-  <nav class="nav">
-    <div class="nav__inner">
-      <a href="#top" class="brand">Flight Trends</a>
-      <div class="nav__links">
-        <a href="#overview">Overview</a>
-        <a href="#routes">Routes Map</a>
-        <a href="#market">Market Share</a>
-        <a href="#seasonality">Seasonality</a>
-        <a href="#seasonal-capacity">Capacity</a>
-        <a href="#methods">Methods</a>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Title area -->
-  <header id="top" class="hero">
-    <div class="container">
-      <p class="kicker" data-aos="fade-up">DS4200 Final Project - Tisya Sharma, Tim Matten</p>
-      <h1 data-aos="fade-up">Major Flight Trends Over the Past 25 Years</h1>
-      <p class="lede" data-aos="fade-up">
-        How economic shocks and global events shaped U.S. air travel from 1999–2024.
-      </p>
-    </div>
-  </header>
-
-  <!-- Overview of project -->
-  <section id="overview" class="section">
-    <div class="container narrow" data-aos="fade-up">
-      <p class="kicker">Overview</p>
-      <h2>What this analysis shows</h2>
-      <p>
-        An interactive view of U.S. air travel patterns (1999–2024): map the top destinations for any origin, year,
-        and month. Also see which carriers serve that origin, and explore the market share and seasonality trends across the
-        the U.S. over 25 years.
-      </p>
-    </div>
-  </section>
-
-  <!-- ROUTES MAP -->
-  <section id="routes" class="section section--alt">
-    <div class="container">
-      <div class="section__head" data-aos="fade-up">
-        <div>
-          <p class="kicker">Routes</p>
-          <h3>Passenger Flows by Origin</h3>
-          <p class="muted">Interactive U.S. route map showing the top destinations for a chosen origin, year, and month. Route lines are sized by volume; the top 3 routes are highlighted.</p>
-          <div class="map-legend">
-            <span class="legend-item"><span class="dot" style="--c:var(--accent1)"></span>Top 3 routes</span>
-            <span class="legend-item"><span class="dot" style="--c:var(--route)"></span>Other top routes</span>
-          </div>
-        </div>
-        <div class="map-controls">
-          <button class="btn btn--ghost" onclick="downloadPNG('flowMap')">Save PNG</button>
-        </div>
-      </div>
-
-      <div id="flowMap" class="viz-card viz-card--tall" data-aos="fade-up">
-        <div class="map-layout">
-          <div class="map-filters">
-            <h4>Filters</h4>
-            <label>Origin Airport
-              <select id="originSelect" class="select"></select>
-            </label>
-            <label>Year
-              <select id="mapYearSelect" class="select"></select>
-            </label>
-            <label>Month
-              <select id="mapMonthSelect" class="select">
-                <option value="0" selected>All months</option>
-                <option value="1">January</option>
-                <option value="2">February</option>
-                <option value="3">March</option>
-                <option value="4">April</option>
-                <option value="5">May</option>
-                <option value="6">June</option>
-                <option value="7">July</option>
-                <option value="8">August</option>
-                <option value="9">September</option>
-                <option value="10">October</option>
-                <option value="11">November</option>
-                <option value="12">December</option>
-              </select>
-            </label>
-            <label>Sort by
-              <select id="mapSort" class="select">
-                <option value="PASSENGERS" selected>Passengers</option>
-                <option value="DEPARTURES">Flights</option>
-              </select>
-            </label>
-            <label>Top destinations
-              <input type="range" id="mapTopSlider" min="1" max="25" step="1" value="15">
-              <div class="range-meta"><span>1</span><span id="mapTopVal">15</span></div>
-            </label>
-            <div class="map-zoom">
-              <button id="zoomReset" class="btn btn--ghost btn--reset">Reset</button>
-              <span class="zoom-label">Zoom <span id="zoomVal">1.0x</span></span>
-            </div>
-          </div>
-          <div class="map-canvas" id="flowMapCanvas">
-          </div>
-        </div>
-      </div>
-      <div class="map-panels" data-aos="fade-up">
-        <div class="card" id="mapSummary">
-          <h4>Selection</h4>
-          <p class="muted">Totals will appear here after data loads.</p>
-        </div>
-        <div class="card" id="carrierList">
-          <h4>Carriers Serving Origin</h4>
-          <p class="muted">Top carriers by passengers for this origin.</p>
-        </div>
-      </div>
-      <p class="caption">Figure 1. Top destinations for the selected month (summed if “All months”).</p>
-    </div>
-  </section>
-
-    <section id="viz-takeaways" class="section section--alt">
-    <div class="container" data-aos="fade-up">
-      <h2 class="kicker">Takeaways</h2>
-      <div class="viz-block">
-        <h3>Passenger Flows by Origin (Route Map)</h3>
-        <p>This visualization highlights the busiest routes from a selected airport, allowing users to explore how travel demand shifts by month, year, and destination. The thickest arcs represent the highest-volume routes, and the top three are specially highlighted. The map reveals geographic travel patterns clearly and helps identify dominant origin–destination relationships.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- MARKET SHARE -->
-  <section id="market" class="section">
-    <div class="container">
-      <div class="section__head" data-aos="fade-up">
-        <div>
-          <p class="kicker">Market Share</p>
-          <h3>Airline Market Share (100% Stacked)</h3>
-          <p class="muted">Relative domestic passenger share by carrier, normalized to 100% each month so you can spot winners/losers regardless of total volume.</p>
-        </div>
-        <div class="map-controls">
-          <button class="btn btn--ghost" onclick="downloadPNG('marketShareChart')">Save PNG</button>
-        </div>
-      </div>
-
-      <div class="viz-card viz-card--market" data-aos="fade-up">
-        <div class="market-share-inner">
-          <div class="legend-panel">
-            <div class="legend-title">Filter carriers</div>
-            <div id="marketLegend" class="stacked-legend"></div>
-          </div>
-          <div id="marketShareChart" class="chart-area"></div>
-        </div>
-      </div>
-      <p class="caption">Figure 2. Each band shows that carrier’s percentage of the domestic market; “Other” aggregates smaller airlines.</p>
-    </div>
-  </section>
-
-    <section id="viz-takeaways" class="section section--alt">
-    <div class="container" data-aos="fade-up">
-      <h2 class="kicker">Visualization Takeaways</h2>
-      <div class="viz-block">
-        <h3>Airline Market Share (100% Stacked Area Chart)</h3>
-        <p>The stacked area chart shows how U.S. airline market share has shifted over the last 25 years. Each month is normalized to 100%, making airline comparisons straightforward. Major consolidation trends, volatility during major events, and the dominance of major carriers become visually apparent.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- SEASONAL HEATMAP -->
-  <section id="seasonality" class="section section--alt">
-    <div class="container">
-      <div class="section__head" data-aos="fade-up">
-        <div>
-          <p class="kicker">Seasonality</p>
-          <h3>Seasonal Passenger Heatmap</h3>
-          <p class="muted">
-            A month-by-year grid highlighting seasonal travel peaks, disruptions, and long-term recovery trends.
-          </p>
-        </div>
-        <div class="map-controls">
-          <button class="btn btn--ghost" onclick="downloadPNG('seasonHeatmap')">Save PNG</button>
-        </div>
-      </div>
-
-      <div id="seasonHeatmap" class="viz-card" data-aos="fade-up"></div>
-      <p class="caption">Figure 3. Darker colors represent months with higher passenger counts.</p>
-    </div>
-  </section>
-
-  <section id="viz-takeaways" class="section section--alt">
-    <div class="container" data-aos="fade-up">
-      <h2 class="kicker">Visualization Takeaways</h2>
-      <div class="viz-block">
-        <h3>Seasonal Passenger Heatmap</h3>
-        <p>This heatmap reveals seasonal cycles in U.S. air travel, with darker shades showing summer peaks and lighter shades indicating slower months. Dramatic disruptions—including 9/11, the Great Recession, and COVID-19—appear as extremely light periods. This visualization shows long-term recovery and seasonality clearly.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- SEASONAL SCATTER + HISTOGRAM -->
-  <section id="seasonal-capacity" class="section">
-    <div class="container">
-      <div class="section__head" data-aos="fade-up">
-        <div>
-          <p class="kicker">Capacity Analysis</p>
-          <h3>Seasonal Capacity Patterns</h3>
-          <p class="muted">Explore how load factor varies by season, and examine the distribution of efficiency for specific regions of interest.</p>
-        </div>
-        <div class="map-controls">
-          <button class="btn btn--ghost" onclick="downloadPNG('seasonalChart')">Save PNG</button>
-        </div>
-      </div>
-
-      <!-- Vega chart container -->
-      <div id="seasonalChart" class="viz-card"></div>
-
-      <p class="caption">
-        Brushing over the scatterplot filters the histogram on the right to show only points from the selected region.
-      </p>
-    </div>
-  </section>
-
-  <section id="viz-takeaways" class="section section--alt">
-    <div class="container" data-aos="fade-up">
-      <h2 class="kicker">Visualization Takeaways</h2>
-      <div class="viz-block">
-        <h3>Seasonal Capacity Patterns (Scatter + Histogram)</h3>
-        <p>The scatterplot and histogram show relationships between passenger volume, available seats, and load factor across seasons. Higher-capacity regions tend to reach higher load factors, especially during summer. Brushing enables users to explore how load factor distributions change for specific regions or seasons.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- TRAVEL VOLUME TIMELINE -->
-  <section id="travel-timeline" class="section">
-    <div class="container">
-
-      <div class="section__head" data-aos="fade-up">
-        <div>
-          <p class="kicker">Long-Term Trends</p>
-          <h3>Travel Volume Index with Historical Events</h3>
-          <p class="muted">
-            This annotated timeline highlights how major economic, geopolitical, and industry events
-            shaped U.S. air travel demand over the last two decades.
-          </p>
-        </div>
-        <div class="map-controls">
-          <button class="btn btn--ghost" onclick="downloadPNG('timeline-img')">Save PNG</button>
-        </div>
-      </div>
-
-      <!-- PNG visualization -->
-      <div class="viz-card" data-aos="fade-up">
-        <img id="timeline-img"
-            src="annotated_timeline.png"
-            alt="Annotated Travel Volume Timeline"
-            class="timeline-img">
-      </div>
-
-      <p class="caption">
-        Major historical events—such as 9/11, the Great Recession, industry mergers, and the onset of COVID-19—correspond strongly to spikes and drops in national passenger volume.
-      </p>
-
-    </div>
-  </section>
-
-  <section id="viz-takeaways" class="section section--alt">
-    <div class="container" data-aos="fade-up">
-      <h2 class="kicker">Visualization Takeaways</h2>
-      <div class="viz-block">
-        <h3>Travel Volume Index with Historical Events</h3>
-        <p>This annotated line chart displays how national air travel volume has changed relative to 1999 levels. Key events such as 9/11, recessions, mergers, and COVID-19 are clearly labeled, illustrating how economic and geopolitical shocks directly influence air travel.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- CONCLUSION -->
-  <section id="conclusion" class="section section--alt">
-    <div class="container narrow" data-aos="fade-up">
-
-      <p class="kicker">Conclusion</p>
-      <h3>Overall Findings & Insights</h3>
-
-      <p class="conclusion-text">
-        Across our analysis of U.S. air travel from 1999 to 2024, several clear patterns emerged. Passenger flows show that major hub airports consistently sustain strong connections to leisure markets, particularly in warmer regions such as Florida and the Southwest. These hubs act as anchors in the national network, with a small number of high-volume routes accounting for a large share of total passenger movements.
-      </p>
-
-      <p class="conclusion-text">
-        Market share patterns reveal long-term consolidation among U.S. airlines. Mergers—including Delta–Northwest, United–Continental, and American–US Airways—reshaped the competitive landscape, resulting in a small number of carriers holding the majority of domestic demand. While seasonal fluctuations in total traffic are pronounced, especially in summer months, relative carrier share has remained surprisingly stable aside from major disruptive events.
-      </p>
-
-      <p class="conclusion-text">
-        The seasonal passenger heatmap highlights the resilience of the aviation industry. Despite catastrophic declines from 9/11, the Great Recession, and COVID-19, the system consistently recovered to new highs within several years. The load-factor analysis further shows that airlines have become increasingly efficient, with higher utilization of available seats and more consistent performance across seasons.
-      </p>
-
-      <p class="conclusion-text">
-        The long-term travel volume index illustrates how deeply economic and geopolitical events affect mobility in the U.S. While the COVID-19 collapse stands out as the most dramatic shock in modern aviation history, the post-pandemic rebound demonstrates both the essential role of air travel and the industry’s ability to adapt and scale. Overall, the visualizations tell a cohesive story of expansion, operational efficiency, and adaptive recovery—shaped continually by external forces but driven by strong long-term demand for air transportation.
-      </p>
-
-    </div>
-  </section>
-
-
-
-  <!-- Methods -->
-  <section id="methods" class="section section--alt">
-    <div class="container grid-two" data-aos="fade-up">
-      <div>
-        <p class="kicker">Methods</p>
-        <h4>Preprocessing</h4>
-        <ul class="list">
-          <li>Cleaned BTS T-100 segment data (1999–2024) and standardized airport codes.</li>
-          <li>Aggregated routes by year/month with passengers, flights, seats, and load factor.</li>
-          <li>Compiled carrier totals per origin and domestic market-share summaries.</li>
-        </ul>
-      </div>
-      <div>
-        <h4>Sources & Credits</h4>
-        <ul class="list">
-          <li>U.S. Bureau of Transportation Statistics (BTS) T-100</li>
-          <li>Map & custom visuals: D3.js + TopoJSON (basemap) + custom CSS.</li>
-          <li>Charts: Altair/Vega‑Lite (via vega-embed) for stacked areas, heatmaps, scatterplots.</li>
-          <li>Data preparation libraries: Python, Pandas, and custom scripts to build web-ready JSON extracts.</li>
-          <li>Design: Custom CSS.</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-
-
-    <!-- REFERENCES -->
-  <section id="references" class="section">
-    <div class="container" data-aos="fade-up">
-      <p class="kicker">References</p>
-      <h3>Sources and Further Reading</h3>
-
-      <ul class="reference-list">
-        <li>
-          <a href="https://www.researchgate.net/publication/238753728_An_Analysis_of_Air_Travel_Trends_in_the_United_States" target="_blank">
-            An Analysis of Air Travel Trends in the United States — ResearchGate
-          </a>
-        </li>
-
-        <li>
-          <a href="https://crp.trb.org/acrpwebresource12/understanding-air-service-and-regional-economic-activity/how-has-air-service-changed-over-time/#:~:text=were%20two%20notable%20decreases%3A%20the,surpass%202007%20levels%20until%202015" target="_blank">
-            How Air Service Has Changed Over Time — Airport Cooperative Research Program (ACRP)
-          </a>
-        </li>
-      </ul>
-    </div>
-  </section>
-
-
-  <footer class="footer">
-    <div class="container">
-      © 2025 DS4200 Group 35 · <span class="accent2">Northeastern University</span>
-    </div>
-  </footer>
-
-  <!-- Back to top -->
-  <button id="toTop" class="to-top">Top</button>
-
-  <!-- Scripts -->
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script src="main.js?v=4"></script>
+  <p>If you are not redirected, <a href="site/index.html">view the site here</a>.</p>
 </body>
 </html>
