--- a/index.html
+++ b/index.html
@@ -393,6 +393,6 @@
 
   <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script src="main.js?v=4"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
